<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:orderInCategory="25"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_content"
        android:orderInCategory="100"
        android:title="@string/action_content"
        app:showAsAction="never" />
    <item
        android:id="@+id/more_apps"
        android:orderInCategory="200"
        android:title="@string/more_apps"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="300"
        android:title="@string/about_us"
        app:showAsAction="never" />
</menu>