<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.About">

    <!-- Include the reusable toolbar -->
    <include layout="@layout/toolbar" />

    <Button
        android:id="@+id/rateUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="#9e2723"
        android:onClick="goToChap"
        android:text="@string/feedBack"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rateUs"
        android:background="#112442">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:drawable/presence_online"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#112442"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:saveEnabled="true"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#cfd8dc"
                android:textSize="22sp"
                app:fontFamily="@font/solaimanlipi" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:drawable/presence_online" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#112442"
                android:fontFamily="@font/solaimanlipi"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:saveEnabled="true"
                android:text="@string/about_us2"
                android:textAlignment="center"
                android:textColor="#cfd8dc"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#112442"
        android:onClick="goToChap"
        android:saveEnabled="true"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="#cfd8dc"
        android:textSize="20sp" />
</RelativeLayout>